// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextField /> renders component 1`] = `
.c0 {
  font-size: 16px;
  font-weight: 400;
  line-height: 1.25;
  padding: 12px 16px;
}

.c1 {
  width: 100%;
  border: 1px solid #88989E;
  border-radius: 12px;
  outline: none;
  padding: 12px 16px;
}

<input
  class="c0 c1"
  name="nome"
  placeholder="Nome"
  type="text"
  value="Victor"
/>
`;

exports[`<TextField /> when field is invalid displays the respective error message 1`] = `
.c0 {
  font-size: 16px;
  font-weight: 400;
  line-height: 1.25;
  padding: 12px 16px;
}

.c1 {
  width: 100%;
  border: 1px solid #88989E;
  border-radius: 12px;
  outline: none;
  border-color: #dc3545;
  padding: 12px 16px;
}

.c1 + span {
  color: #dc3545;
  font-size: 11px;
}

<input
  class="c0 c1"
  name="email"
  placeholder="Email"
  type="text"
  value="teste@gmail.com"
/>
`;
